--- a/main.ipynb
+++ b/main.ipynb
@@ -5,8 +5,16 @@
    "id": "7f47cea6",
    "metadata": {},
    "source": [
-    "# Mini-projet Probabilités — Test du GCL **RANDU**\n"
+    "# Mini-projet Probabilités — GCL RANDU\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f75edd4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
