creation du randu_generator

--- a/main.ipynb
+++ b/main.ipynb
@@ -57,7 +57,6 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import seaborn as sns\n",
     "\n",
-    "# Configuration pour de meilleurs graphiques\n",
     "sns.set_style(\"whitegrid\")\n",
     "plt.rcParams['figure.figsize'] = (12, 8)"
    ]
@@ -77,39 +76,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RANDU:\n",
+    "def randu_generator(seed, n):\n",
     "    \"\"\"\n",
     "    Générateur congruentiel linéaire RANDU\n",
     "    x_{n+1} = (65539 * x_n) mod 2^31\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    seed : int\n",
+    "        Graine initiale (x_0)\n",
+    "    n : int\n",
+    "        Nombre de valeurs à générer\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    numpy.ndarray : Tableau de n nombres dans [0, 1]\n",
     "    \"\"\"\n",
-    "    def __init__(self, seed=12345):\n",
-    "        self.seed = seed\n",
-    "        self.a = 65539\n",
-    "        self.m = 2**31\n",
-    "        self.current = seed\n",
+    "    a = 65539\n",
+    "    m = 2**31\n",
+    "    current = seed\n",
+    "    result = []\n",
     "    \n",
-    "    def next_int(self):\n",
-    "        \"\"\"Génère le prochain entier\"\"\"\n",
-    "        self.current = (self.a * self.current) % self.m\n",
-    "        return self.current\n",
+    "    for _ in range(n):\n",
+    "        current = (a * current) % m\n",
+    "        result.append(current / m)\n",
     "    \n",
-    "    def next_float(self):\n",
-    "        \"\"\"Génère le prochain nombre dans [0, 1]\"\"\"\n",
-    "        return self.next_int() / self.m\n",
-    "    \n",
-    "    def generate_sequence(self, n):\n",
-    "        \"\"\"Génère une séquence de n nombres dans [0, 1]\"\"\"\n",
-    "        return np.array([self.next_float() for _ in range(n)])\n",
-    "    \n",
-    "    def reset(self):\n",
-    "        \"\"\"Réinitialise le générateur\"\"\"\n",
-    "        self.current = self.seed\n",
+    "    return np.array(result)\n",
     "\n",
     "# Test du générateur\n",
-    "randu = RANDU(12345)\n",
     "print(\"Premiers 10 nombres générés:\")\n",
-    "for i in range(10):\n",
-    "    print(f\"x_{i+1} = {randu.next_float():.6f}\")"
+    "test_data = randu_generator(12345, 10)\n",
+    "for i, val in enumerate(test_data, 1):\n",
+    "    print(f\"x_{i} = {val:.6f}\")"
    ]
   },
   {
@@ -406,8 +404,7 @@
     "print(\"=\"*70)\n",
     "\n",
     "# Génération des données\n",
-    "randu_30k = RANDU(12345)\n",
-    "data_30k = randu_30k.generate_sequence(30000)\n",
+    "data_30k = randu_generator(12345, 30000)\n",
     "\n",
     "print(f\"\\n✓ Généré {len(data_30k)} nombres\")\n",
     "print(f\"  Min: {data_30k.min():.6f}, Max: {data_30k.max():.6f}\")\n",
@@ -531,8 +528,7 @@
     "print(\"=\"*70)\n",
     "\n",
     "# Génération des données\n",
-    "randu_90k = RANDU(12345)\n",
-    "data_90k = randu_90k.generate_sequence(90000)\n",
+    "data_90k = randu_generator(12345, 90000)\n",
     "\n",
     "print(f\"\\n✓ Généré {len(data_90k)} nombres\")\n",
     "print(f\"  Min: {data_90k.min():.6f}, Max: {data_90k.max():.6f}\")\n",
@@ -656,8 +652,7 @@
     "print(\"=\"*70)\n",
     "\n",
     "# Génération des données\n",
-    "randu_300k = RANDU(12345)\n",
-    "data_300k = randu_300k.generate_sequence(300000)\n",
+    "data_300k = randu_generator(12345, 300000)\n",
     "\n",
     "print(f\"\\n✓ Généré {len(data_300k)} nombres\")\n",
     "print(f\"  Min: {data_300k.min():.6f}, Max: {data_300k.max():.6f}\")\n",
