implémentation du dénérateur de randu et test du khi-deux

--- a/main.ipynb
+++ b/main.ipynb
@@ -71,43 +71,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "70cfe743",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.37675674771890044, 0.2604887490160763, 0.17212176462635398, 0.6883318466134369, 0.5808951980434358]\n"
+     ]
+    }
+   ],
    "source": [
-    "def randu_generator(seed, n):\n",
-    "    \"\"\"\n",
-    "    Générateur congruentiel linéaire RANDU\n",
-    "    x_{n+1} = (65539 * x_n) mod 2^31\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    seed : int\n",
-    "        Graine initiale (x_0)\n",
-    "    n : int\n",
-    "        Nombre de valeurs à générer\n",
-    "    \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    numpy.ndarray : Tableau de n nombres dans [0, 1]\n",
-    "    \"\"\"\n",
+    "#1.À partir de ce GCL générer une suite de nombre dans l’intervalle [0,1].\n",
+    "\n",
+    "def randu(n, x0=12345):\n",
     "    a = 65539\n",
     "    m = 2**31\n",
-    "    current = seed\n",
-    "    result = []\n",
-    "    \n",
-    "    for _ in range(n):\n",
-    "        current = (a * current) % m\n",
-    "        result.append(current / m)\n",
-    "    \n",
-    "    return np.array(result)\n",
+    "    x = x0\n",
+    "    liste = []\n",
+    "    for i in range(n):\n",
+    "        x = (a * x) % m         \n",
+    "        liste.append(x / m)       \n",
+    "    return liste\n",
     "\n",
-    "# Test du générateur\n",
-    "print(\"Premiers 10 nombres générés:\")\n",
-    "test_data = randu_generator(12345, 10)\n",
-    "for i, val in enumerate(test_data, 1):\n",
-    "    print(f\"x_{i} = {val:.6f}\")"
+    "valeurs = randu(5)\n",
+    "print(valeurs)\n",
+    "\n"
    ]
   },
   {
@@ -118,6 +109,7 @@
     "## 3. Test du Khi-deux (χ²)\n",
     "\n",
     "Le test du khi-deux vérifie si la distribution des nombres générés suit une distribution uniforme.\n",
+    "En outre est-ce que les valeurs sont bien réparties entre 0 et 1 ?\n",
     "\n",
     "Pour un seuil de confiance de 1% (α = 0.01), on rejette l'hypothèse nulle si la statistique χ² est supérieure à la valeur critique."
    ]
@@ -127,73 +119,46 @@
    "execution_count": null,
    "id": "418fa973",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Test du Khi-Deux -----\n",
+      "Nombre de valeurs : 300000\n",
+      "Statistique Khi² = 5.49\n",
+      "Valeur critique (1%) = 21.666\n",
+      "Test réussi : répartition uniforme\n",
+      "-----------------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "def chi_square_test(data, num_bins=100, alpha=0.01):\n",
-    "    \"\"\"\n",
-    "    Test du khi-deux pour vérifier l'uniformité\n",
+    "# --- Test du khi-deux ---\n",
+    "def test_khi2(data):\n",
+    "    N = len(data)          # nombre total de valeurs\n",
+    "    k = 10             # nombre d'intervalles\n",
+    "    counts, bins = np.histogram(data, bins=10) # compte combien de valeurs dans chaque case - Observé Oi\n",
+    "    nbAttendu = N / k        # ce qu'on devrait avoir dans chaque case si uniforme - Ei = N/k\n",
     "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    data : array-like\n",
-    "        Données à tester (entre 0 et 1)\n",
-    "    num_bins : int\n",
-    "        Nombre de classes\n",
-    "    alpha : float\n",
-    "        Seuil de confiance (0.01 pour 1%)\n",
-    "    \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    dict : Résultats du test\n",
-    "    \"\"\"\n",
-    "    n = len(data)\n",
-    "    \n",
-    "    # Histogramme observé\n",
-    "    observed, _ = np.histogram(data, bins=num_bins, range=(0, 1))\n",
-    "    \n",
-    "    # Fréquences attendues (distribution uniforme)\n",
-    "    expected = np.full(num_bins, n / num_bins)\n",
-    "    \n",
-    "    # Statistique du khi-deux\n",
-    "    chi2_stat = np.sum((observed - expected)**2 / expected)\n",
-    "    \n",
-    "    # Degrés de liberté\n",
-    "    df = num_bins - 1\n",
-    "    \n",
-    "    # Valeur critique\n",
-    "    critical_value = stats.chi2.ppf(1 - alpha, df)\n",
-    "    \n",
-    "    # P-value\n",
-    "    p_value = 1 - stats.chi2.cdf(chi2_stat, df)\n",
-    "    \n",
-    "    # Décision\n",
-    "    reject_null = chi2_stat > critical_value\n",
-    "    \n",
-    "    return {\n",
-    "        'n': n,\n",
-    "        'num_bins': num_bins,\n",
-    "        'chi2_stat': chi2_stat,\n",
-    "        'df': df,\n",
-    "        'critical_value': critical_value,\n",
-    "        'p_value': p_value,\n",
-    "        'reject_null': reject_null,\n",
-    "        'alpha': alpha\n",
-    "    }\n",
+    "    khi2 = np.sum((counts - nbAttendu)**2 / nbAttendu)# Calcul de la statistique du khi-deux\n",
     "\n",
-    "def print_chi_square_results(results):\n",
-    "    \"\"\"Affiche les résultats du test du khi-deux\"\"\"\n",
-    "    print(f\"Taille de l'échantillon : {results['n']}\")\n",
-    "    print(f\"Nombre de classes : {results['num_bins']}\")\n",
-    "    print(f\"Degrés de liberté : {results['df']}\")\n",
-    "    print(f\"Statistique χ² : {results['chi2_stat']:.4f}\")\n",
-    "    print(f\"Valeur critique (α={results['alpha']}) : {results['critical_value']:.4f}\")\n",
-    "    print(f\"P-value : {results['p_value']:.6f}\")\n",
-    "    print(f\"Décision : {'REJETÉ' if results['reject_null'] else 'ACCEPTÉ'}\")\n",
-    "    \n",
-    "    if results['reject_null']:\n",
-    "        print(\"❌ Le générateur NE PASSE PAS le test du khi-deux\")\n",
+    "    # Valeur critique à 1% pour 9 degrés de liberté (voir la table du khi2)\n",
+    "    seuil = 21.666\n",
+    "\n",
+    "    print(\"----- Test du Khi-Deux -----\")\n",
+    "    print(f\"Nombre de valeurs : {N}\")\n",
+    "    print(f\"Statistique Khi² = {khi2:.2f}\")\n",
+    "    print(f\"Valeur critique (1%) = {seuil}\")\n",
+    "    if khi2 < seuil:\n",
+    "        print(\"Test réussi : répartition uniforme\")\n",
     "    else:\n",
-    "        print(\"✅ Le générateur PASSE le test du khi-deux\")"
+    "        print(\"Test échoué : répartition non uniforme\")\n",
+    "    print(\"-----------------------------\")\n",
+    "\n",
+    "# --- Exécution du test ---\n",
+    "valeurs = randu(30000)\n",
+    "test_khi2(valeurs)\n"
    ]
   },
   {
@@ -203,7 +168,8 @@
    "source": [
     "## 4. Test spectral 2D (doublets)\n",
     "\n",
-    "Le test spectral 2D analyse les corrélations entre paires de nombres consécutifs en les visualisant dans un plan 2D."
+    "Le test spectral 2D analyse les corrélations entre paires de nombres consécutifs en les visualisant dans un plan 2D.\n",
+    "En outre est-ce que les couples (𝑢𝑛,𝑢𝑛+1) forment un nuage aléatoire"
    ]
   },
   {
@@ -285,7 +251,8 @@
    "source": [
     "## 5. Test spectral 3D (triplets)\n",
     "\n",
-    "Le test spectral 3D analyse les corrélations entre triplets de nombres consécutifs en les visualisant dans un espace 3D. C'est un test particulièrement révélateur pour RANDU, qui est connu pour avoir des structures en plans parallèles."
+    "Le test spectral 3D analyse les corrélations entre triplets de nombres consécutifs en les visualisant dans un espace 3D. C'est un test particulièrement révélateur pour RANDU, qui est connu pour avoir des structures en plans parallèles.\n",
+    "En outre est-ce que les triplets (𝑢𝑛,𝑢𝑛+1,un+2) forment un nuage aléatoire"
    ]
   },
   {
@@ -394,10 +361,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c4aa4620",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "TESTS AVEC 30 000 DONNÉES\n",
+      "======================================================================\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'randu_generator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m*\u001b[32m70\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Génération des données\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m data_30k = \u001b[43mrandu_generator\u001b[49m(\u001b[32m12345\u001b[39m, \u001b[32m30000\u001b[39m)\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m✓ Généré \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(data_30k)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m nombres\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m  Min: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_30k.min()\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.6f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Max: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_30k.max()\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.6f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'randu_generator' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(\"=\"*70)\n",
     "print(\"TESTS AVEC 30 000 DONNÉES\")\n",
@@ -422,10 +410,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "36277e03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "TEST DU KHI-DEUX (30 000 données)\n",
+      "----------------------------------------------------------------------\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_30k' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTEST DU KHI-DEUX (30 000 données)\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m-\u001b[39m\u001b[33m\"\u001b[39m*\u001b[32m70\u001b[39m + \u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m results_chi2_30k = chi_square_test(\u001b[43mdata_30k\u001b[49m, num_bins=\u001b[32m100\u001b[39m, alpha=\u001b[32m0.01\u001b[39m)\n\u001b[32m      6\u001b[39m print_chi_square_results(results_chi2_30k)\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Visualisation de la distribution\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'data_30k' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n\" + \"-\"*70)\n",
     "print(\"TEST DU KHI-DEUX (30 000 données)\")\n",
@@ -895,8 +906,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
